testsuite/tests/properties/invalid_builtin/test.out
== invalid_attr/test.lkt ==
test.lkt:4:46: error: this is a builtin method, it should be called
4 |     @exported fun p(): Array[FooNode] = node.unique
  |                                              ^^^^^^


== invalid_call/test.lkt ==
test.lkt:4:38: error: this is a builtin attribute, it should not be called
4 |     @exported fun p(): Symbol = node.symbol()
  |                                      ^^^^^^


lkt_compile: Done
